# browser-toolkit

./: Makefile  README.md  pyproject.toml
browser_toolkit/: __init__.py  base_toolkit.py  camoufox.py  playwright.py  pydoll.py  selenium.py  types.py  utils.py
browser_toolkit/create_browser/: playwright.py
browser_toolkit/selenium_toolkit/: __init__.py  selenium_toolkit.py  utils.py
selenium_toolkit/: selenium_toolkit.py
tests/: get_driver.py  test_WebDriverWait.py  test_auto_wait.py  test_decorators.py  test_network_requests.py  test_open.py  test_response_data_from_request.py  test_scroll_window.py  test_wait.py
