[project]
name = "browser-toolkit"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydoll-python>=2.23.0",
    "selenium>=4.44.0",
]


[project.urls]
Homepage = "https://github.com/toriium/browser-toolkit"
Documentation = "https://github.com/toriium/browser-toolkit/blob/master/README.md"
Repository = "https://github.com/toriium/browser-toolkit"