[project]
name = "browser-toolkit"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camoufox>=0.4.11",
    "playwright>=1.60.0",
    "pydoll-python>=2.23.0",
    "selenium>=4.44.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[dependency-groups]
dev = [
    "webdriver-manager>=4.1.2",
]


[project.urls]
Homepage = "https://github.com/toriium/browser-toolkit"
Documentation = "https://github.com/toriium/browser-toolkit/blob/master/README.md"
Repository = "https://github.com/toriium/browser-toolkit"
