[project]
name = "browser-toolkit"
version = "0.0.1a2"
description = "Toolkit that provides a single inteface to interact with different browser automations."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camoufox>=0.4.11",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pydoll-python>=2.23.0",
    "selenium>=4.44.0",
]

[project.urls]
Homepage = "https://github.com/toriium/browser-toolkit"
Documentation = "https://github.com/toriium/browser-toolkit/blob/master/README.md"
Repository = "https://github.com/toriium/browser-toolkit"

[tool.ruff]
line-length = 120
target-version = "py312"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "webdriver-manager>=4.1.2",
]

[tool.pytest.ini_options]
anyio_mode = "auto"



